--- a/MapTest/en.lproj/MainStoryboard.storyboard
+++ b/MapTest/en.lproj/MainStoryboard.storyboard
@@ -1,23 +1,128 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2519" systemVersion="12A206j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1856"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
     </dependencies>
     <scenes>
-        <!--class Prefix:identifier View Controller-->
+        <!--Map Test View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="MapTestViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <segue destination="leD-SJ-hKY" kind="push" id="kIe-eC-l16"/>
+                        <segue destination="Nli-cM-FFg" kind="push" id="Cnf-5C-mrG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-557" y="-34"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Iwg-lX-KU5">
+            <objects>
+                <viewController id="leD-SJ-hKY" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vq5-b6-NS1">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="cgS-dp-q0m"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jMT-56-hyF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-12" y="-313"/>
+        </scene>
+        <!--Create Spot View Controller-->
+        <scene sceneID="My5-Xx-8qr">
+            <objects>
+                <viewController id="Nli-cM-FFg" customClass="createSpotViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="72q-DV-oHf">
+                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fOd-S2-iFd">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="176" id="4PU-L8-8Ch"/>
+                                    <constraint firstAttribute="width" constant="176" id="Q1h-cz-1Yh"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ecz-ZA-RLL">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="285" id="Bd3-hf-tHe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TTA-H5-tiG">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="camera">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="startCamera:" destination="Nli-cM-FFg" eventType="touchUpInside" id="Wxj-bd-8V4"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l9z-dv-bhB">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="send">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendDataToServer:" destination="Nli-cM-FFg" eventType="touchUpInside" id="aIe-ty-45k"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ecz-ZA-RLL" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="HbP-6P-NgJ"/>
+                            <constraint firstItem="TTA-H5-tiG" firstAttribute="leading" secondItem="72q-DV-oHf" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Lob-pb-ikw"/>
+                            <constraint firstAttribute="bottom" secondItem="TTA-H5-tiG" secondAttribute="bottom" constant="165" id="Rg0-n3-Fct"/>
+                            <constraint firstItem="fOd-S2-iFd" firstAttribute="leading" secondItem="72q-DV-oHf" secondAttribute="leading" constant="57" id="U8I-Nm-JRD"/>
+                            <constraint firstAttribute="trailing" secondItem="l9z-dv-bhB" secondAttribute="trailing" constant="25" id="iKR-8J-DK7"/>
+                            <constraint firstItem="l9z-dv-bhB" firstAttribute="baseline" secondItem="TTA-H5-tiG" secondAttribute="baseline" type="default" id="jyZ-1P-ZuS"/>
+                            <constraint firstItem="fOd-S2-iFd" firstAttribute="top" secondItem="72q-DV-oHf" secondAttribute="top" constant="20" symbolic="YES" type="default" id="plH-Rh-Bes"/>
+                            <constraint firstItem="ecz-ZA-RLL" firstAttribute="top" secondItem="fOd-S2-iFd" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="vDL-2b-h1S"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="OCp-dA-d4p"/>
+                    <connections>
+                        <outlet property="pictureImage" destination="fOd-S2-iFd" id="JQp-zB-0Rx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tcg-Dj-vEF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-26" y="380"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="MapTestViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapTestViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="createSpotViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/createSpotViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="sendDataToServer:"/>
+                <relationship kind="action" name="startCamera:"/>
+                <relationship kind="outlet" name="pictureImage" candidateClass="UIImageView"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
