--- a/MapTest/en.lproj/MainStoryboard.storyboard
+++ b/MapTest/en.lproj/MainStoryboard.storyboard
@@ -25,7 +25,7 @@
         <!--View Controller-->
         <scene sceneID="Iwg-lX-KU5">
             <objects>
-                <viewController id="leD-SJ-hKY" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="supotto" useStoryboardIdentifierAsRestorationIdentifier="YES" id="leD-SJ-hKY" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vq5-b6-NS1">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -40,7 +40,7 @@
         <!--Create Spot View Controller-->
         <scene sceneID="My5-Xx-8qr">
             <objects>
-                <viewController id="Nli-cM-FFg" customClass="createSpotViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="callFromSampleMap" useStoryboardIdentifierAsRestorationIdentifier="YES" id="Nli-cM-FFg" customClass="createSpotViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="72q-DV-oHf">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -107,22 +107,6 @@
             <point key="canvasLocation" x="-26" y="380"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="MapTestViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapTestViewController.h"/>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="createSpotViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/createSpotViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="sendDataToServer:"/>
-                <relationship kind="action" name="startCamera:"/>
-                <relationship kind="outlet" name="pictureImage" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
