--- a/MapTest/en.lproj/MainStoryboard.storyboard
+++ b/MapTest/en.lproj/MainStoryboard.storyboard
@@ -219,6 +219,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Label" lineBreakMode="tailTruncation" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JaW-PI-5yP">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="mX6-fK-d9V"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -232,12 +235,12 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="10C-UB-IbE" firstAttribute="top" secondItem="8Tr-su-tDi" secondAttribute="top" constant="65" id="Cea-Rx-X9a"/>
-                            <constraint firstItem="0YM-rq-pgc" firstAttribute="top" secondItem="8Tr-su-tDi" secondAttribute="top" constant="132" id="Eum-9h-10e"/>
-                            <constraint firstItem="JaW-PI-5yP" firstAttribute="centerX" secondItem="8Tr-su-tDi" secondAttribute="centerX" type="default" id="JCR-7r-Fje"/>
+                            <constraint firstAttribute="bottom" secondItem="JaW-PI-5yP" secondAttribute="bottom" constant="47" id="4zP-PC-9nB"/>
+                            <constraint firstItem="0YM-rq-pgc" firstAttribute="top" secondItem="8Tr-su-tDi" secondAttribute="top" constant="112" id="DJl-zb-O10"/>
+                            <constraint firstItem="10C-UB-IbE" firstAttribute="top" secondItem="8Tr-su-tDi" secondAttribute="top" constant="66" id="Fno-tY-cLV"/>
                             <constraint firstItem="JaW-PI-5yP" firstAttribute="leading" secondItem="10C-UB-IbE" secondAttribute="leading" type="default" id="VLC-xK-by0"/>
-                            <constraint firstItem="0YM-rq-pgc" firstAttribute="leading" secondItem="8Tr-su-tDi" secondAttribute="leading" constant="49" id="bO6-pY-6g9"/>
-                            <constraint firstAttribute="bottom" secondItem="JaW-PI-5yP" secondAttribute="bottom" constant="68" id="fOT-bF-8yV"/>
+                            <constraint firstItem="0YM-rq-pgc" firstAttribute="centerX" secondItem="10C-UB-IbE" secondAttribute="centerX" type="default" id="cci-Sx-Y10"/>
+                            <constraint firstItem="10C-UB-IbE" firstAttribute="centerX" secondItem="8Tr-su-tDi" secondAttribute="centerX" type="default" id="nbK-mY-rwB"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="52B-bf-qnf"/>
@@ -268,6 +271,39 @@
             <point key="canvasLocation" x="-259" y="-415"/>
         </scene>
     </scenes>
+    <classes>
+        <class className="MapTestViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapTestViewController.h"/>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="ShowSpotsViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ShowSpotsViewController.h"/>
+        </class>
+        <class className="SpotDetailViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/SpotDetailViewController.h"/>
+            <relationships>
+                <relationship kind="outlet" name="descLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="spotNavi" candidateClass="UINavigationItem"/>
+                <relationship kind="outlet" name="spotPicture" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="createSpotViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/createSpotViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="sendDataToServer:"/>
+                <relationship kind="action" name="startCamera:"/>
+                <relationship kind="outlet" name="cameraButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="descTF" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="pictureImage" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="scrollView" candidateClass="UIScrollView"/>
+                <relationship kind="outlet" name="sendButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="titleTF" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
